--- a/index.directory/account-config.json
+++ b/index.directory/account-config.json
@@ -4,6 +4,13 @@
   "account_opening_date": null,
   "notes": "Starting balance is your initial capital. Add deposits separately to track additional investments. Account opening date is automatically set to your first trade date if not specified.",
   "version": "1.0",
-  "last_updated": "2025-11-03T20:53:12.164Z",
-  "withdrawals": []
+  "last_updated": "2025-11-05T21:33:45.311Z",
+  "withdrawals": [
+    {
+      "amount": 4,
+      "date": "2025-11-05",
+      "note": "Adjustment for starting Amount",
+      "timestamp": "2025-11-05T21:33:45.310Z"
+    }
+  ]
 }
